# FarmMod

./: AUTHORS  LICENSE  README.md  README.pt-BR.md  pyproject.toml  run
.github/workflows/: sync-aur.yml
data/: style.css
packaging/: io.github.henriquejsza.farmmod-hub.desktop
scripts/: sync_aur_release.sh
src/farmmod_hub/: __main__.py
src/farmmod_hub/application/: __init__.py  mods_service.py
src/farmmod_hub/domain/: __init__.py  mods.py
src/farmmod_hub/infrastructure/config/: __init__.py  json_store.py
src/farmmod_hub/infrastructure/logs/: __init__.py  analyzer.py
src/farmmod_hub/infrastructure/mods/: __init__.py  filesystem_repository.py  validator.py
src/farmmod_hub/infrastructure/steam/: __init__.py  locator.py
src/farmmod_hub/presentation/gtk/: app.py  controller.py  window.py
src/farmmod_hub/presentation/gtk/dialogs/: settings_dialog.py
src/farmmod_hub/presentation/gtk/widgets/: __init__.py  content_view.py  drop_zone.py  installed_mods_view.py  log_diagnostics_view.py  sidebar.py  status_bar.py
src/farmmod_hub/presentation/i18n/: __init__.py  translator.py
tests/: test_installer.py  test_log_analyzer.py  test_mods_service.py
tests/integration/: test_json_settings_store.py
